; ModuleID = '/home/carl/AnghaBench/openssl/crypto/async/extr_async.c_ASYNC_cleanup_thread.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/async/extr_async.c_ASYNC_cleanup_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OPENSSL_INIT_ASYNC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ASYNC_cleanup_thread() #0 {
  %1 = load i32, i32* @OPENSSL_INIT_ASYNC, align 4
  %2 = call i32 @OPENSSL_init_crypto(i32 %1, i32* null)
  %3 = icmp ne i32 %2, 0
  br i1 %3, label %5, label %4

4:                                                ; preds = %0
  br label %7

5:                                                ; preds = %0
  %6 = call i32 @async_delete_thread_state(i32* null)
  br label %7

7:                                                ; preds = %5, %4
  ret void
}

declare dso_local i32 @OPENSSL_init_crypto(i32, i32*) #1

declare dso_local i32 @async_delete_thread_state(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
